@@ -1,3 +1,7 @@
+2004-11-18  Kevin Buettner  <kevinb@redhat.com>
+
+	* solib-null.c: New file.
+
 2004-11-17  Andrew Cagney  <cagney@gnu.org>
 
 	* MAINTAINERS: Drop MIPS and remote.
